[tool.poetry]
name = "miniish"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romualdrousseau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
pyvi = {path = "../pyvi"}
pyco = {path = "../pyco"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
